# mllm

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  agentic-trace-conversation  bench.py  bench_train.py  convert.py  data.py  eval.py  eval_ckpt.py  experiment.sh  infer.py  modal_app.py  model.py  optim.py  pyproject.toml  pytest.ini  repl.py  requirements.txt  runpod_start.sh  sample.sh  sft.py  test_e2e.py  tok.py  train.py  train_3b.sh  train_7b.sh  train_base.sh  train_experiment.sh  train_iphone.sh  train_macbook.sh  train_medium.sh  train_sanity.sh  train_tiny.sh  upload_corpus.py  upload_tokenizer.py
.github/workflows/: ci.yml
data/: corpus_README.md
data/pipeline/: 00_download.py  01_filter.py  02_dedup.py  03_train_tokenizer.py  04_download_repos.py  05_tokenize.py  06_prepare_sft.py  pipeline.py
docs/: agent-protocol.md  architecture.md  benchmarking.md  dataset.md  index.html  inference.md  stack.md  training.md
harness/: Dockerfile.sandbox  agent.py  mutator.py  protocol.py  runner.py  sandbox.py  task_gen.py
harness/tests/: test_agent.py  test_mutator.py  test_protocol.py  test_sandbox.py
merlin/: infer.py  repl.py  tok.py
research/: cost_model.md  grant_pitch.md  grants.md  index.md
research/applications/: a16z.md  ai_grant.md  aws_activate.md  coreweave.md  google_trc.md  lambda_labs.md  modal_startups.md
research/benchmarks/: README.md  market.md  selection.md
research/distillation/: README.md  (+1 more)
results/: run_1775768782.json
scripts/: fetch_and_scan.py  patch_bos.py  scan_repos.py  validate_passing.py
wandb/: latest-run
(+103 files in other folders)
